--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,17 @@
 *{
   font-family: 'Times New Roman', Times, serif;
 }
+
+@layer components{
+  .card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 100px;
+    background-color: theme(colors.light-blue);
+    border-radius: 1px solid theme(colors.light-gray);
+    box-shadow: 0 4px 10px -1px rgba(0,0,0,1),
+    0 2px 6px -2px rgba(0,0,0,0.2);
+  }
+}
