--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,23 @@
 
 @layer components{
   .card{
-    display: flex;
+
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+
+    /* below line is same of top 3 lines and it's using tailwind 
+    component in customizing a component  */
+
+    @apply flex items-center justify-center
     width: 300px;
     height: 100px;
-    background-color: theme(colors.light-blue);
-    border-radius: 1px solid theme(colors.light-gray);
+    background-color: theme("colors.light-blue");
+    border-radius: 10px ;
+    border: 0.7px solid theme("colors.light-gray");
     box-shadow: 0 4px 10px -1px rgba(0,0,0,1),
     0 2px 6px -2px rgba(0,0,0,0.2);
   }
+
+
 }
